# picktoss-today-quiz-generation-worker

./: Dockerfile  pyproject.toml
.github/workflows/: aws.yml
constant/: constant.py
core/database/: database_manager.py
core/email/: email_manager.py  today_quiz_template.html
core/enums/: enum.py
worker/: worker.py
